Modified the overlap issue

--- a/css/style.css
+++ b/css/style.css
@@ -6191,7 +6191,7 @@ button.bg-dark:focus {
   margin-top: 3rem !important; }
 @media(max-width:764px){
     .mt-5{
-      margin-top: -22rem !important;
+      margin-top: -16rem !important;
       margin-bottom: -4rem !important;
     }
   }
